--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-16 19:00+0200\n"
-"PO-Revision-Date: 2012-08-20 12:38+0000\n"
+"PO-Revision-Date: 2012-12-04 11:02+0000\n"
 "Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -28,7 +28,7 @@ msgid "Allow guest logins"
 msgstr "Tillad gæste log ind"
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr "Tillad at logins med adgangskode bliver overført åbent. "
+msgstr "Tillad at log ind med adgangskode bliver overført åbent. "
 
 msgid "Allow plain passwords"
 msgstr "Tillad simpel adgangskoder"
@@ -55,7 +55,7 @@ msgid "DNS Service Discovery"
 msgstr "DNS Tjeneste Opdagelse"
 
 msgid "Don't do :hex translation for dot files."
-msgstr "Lav ikke :hex oversættelser for punktum filer."
+msgstr "Lav ikke :hex oversættelser for dot filer."
 
 msgid "Edit share"
 msgstr "Rediger delt mappe"
@@ -91,7 +91,7 @@ msgstr "Hvis denne valgmulighed er sat, kræves der en adgangskode for at tilgå
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr "Hvis denne mulighed sat, så kan brugere ikke oprette eller ændre filer i mappen."
+msgstr "Hvis denne mulighed er markeret, så kan brugere ikke oprette eller ændre filer i mappen."
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
@@ -103,7 +103,7 @@ msgid "Lowercases names in both directions"
 msgstr "Små bogstavs navne i begge retninger"
 
 msgid "Make dot files invisible."
-msgstr "Vis ikke dot filer"
+msgstr "Skjul dot filer"
 
 msgid "Name"
 msgstr "Navn"
@@ -161,12 +161,12 @@ msgid "Use AFP3 unix privileges."
 msgstr "Brug AFP3 unix rettigheder."
 
 msgid "Use dots"
-msgstr "Brug punktum"
+msgstr "Brug dots"
 
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
 ".Parent and anything that starts with .Apple."
-msgstr "Når denne valgmulighed bliver sat, bliver visse filnavne bliver ulovlige. Disse er .Parent og alt, der begynder med .Apple."
+msgstr "Når denne valgmulighed bliver markeret, vil visse filnavne blive ugyldige. Disse er .Parent og alt, der begynder med .Apple."
 
 msgid "n/a"
 msgstr "n/a"
