--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (0.4.3) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Jan 2013 01:41:30 +0100
+
 openmediavault-clamav (0.4.2) stable; urgency=low
 
   * Change file permissions of logrotate config file.
