--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/da_DA/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/da_DA/openmediavault-clamav.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-21 22:48+0200\n"
-"PO-Revision-Date: 2012-07-30 11:14+0000\n"
+"PO-Revision-Date: 2012-12-10 10:13+0000\n"
 "Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Algoritmisk detektering"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "En email med kommando output (hvis der lavet nogle) er sendt til administratoren."
+msgstr "En e-mail besked med kommandoens output (hvis nogen produceret) er sendt til administratoren."
 
 msgid "Antivirus"
 msgstr "Antivirus"
