--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/nl_NL/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/nl_NL/openmediavault-clamav.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-21 22:48+0200\n"
 "PO-Revision-Date: 2012-06-25 20:28+0000\n"
-"Last-Translator: sebak <seba.kerckhof@gmail.com>\n"
+"Last-Translator: Seba Kerckhof <seba.kerckhof@gmail.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/projects/p/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
