--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/no_NO/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/no_NO/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-21 22:48+0200\n"
-"PO-Revision-Date: 2012-06-21 20:49+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-10-25 15:27+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +33,7 @@ msgid "Antivirus"
 msgstr "Antivirus"
 
 msgid "Be verbose."
-msgstr ""
+msgstr "Vær detaljert."
 
 msgid "Comment"
 msgstr "Kommentar"
@@ -146,7 +146,7 @@ msgid "Month"
 msgstr "Måned"
 
 msgid "Multiscan"
-msgstr ""
+msgstr "Multiskann"
 
 msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "Antall databaseoppdateringer pr. dag. Sett til 0 for å deaktivere."
@@ -190,7 +190,7 @@ msgid "Scan archives"
 msgstr "Skann arkiver"
 
 msgid "Scan the directory contents in parallel using available threads."
-msgstr ""
+msgstr "Skann mapper i paralell ved å bruke tilgjengelige tråder."
 
 msgid "Send command output via email"
 msgstr "Send kommandoproduksjon via epost"
@@ -202,7 +202,7 @@ msgid ""
 "Server name where database updates are downloaded from. Get a complete list "
 "of database mirrors <a href='http://www.clamav.net/mirrors.html' "
 "target='_blank'>here</a>."
-msgstr ""
+msgstr "Servernavn der databaseoppdateringer lastes ned fra. Få en komplett liste over databasespeil <a href='http://www.clamav.net/mirrors.html' target='_blank'>her</a>."
 
 msgid "Settings"
 msgstr "Innstillinger"
@@ -214,7 +214,7 @@ msgid "The location of the files to scan."
 msgstr "Plasseringern av filene som skal scannes"
 
 msgid "Verbose"
-msgstr ""
+msgstr "Detaljert"
 
 msgid "n/a"
 msgstr "n/a"
