--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/it_IT/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/it_IT/openmediavault-iscsitarget.po
@@ -2,7 +2,7 @@
 # 
 # @license   http://www.gnu.org/licenses/gpl.html GPL Version 3
 # @author    Volker Theile <volker.theile@openmediavault.org>
-# @copyright Copyright (c) 2009-2013 Volker Theile
+# @copyright Copyright (c) 2009-2012 Volker Theile
 # 
 # OpenMediaVault is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-15 20:05+0100\n"
 "PO-Revision-Date: 2012-04-20 09:56+0000\n"
-"Last-Translator: maurorulli <mauro.rulli@gmail.com>\n"
+"Last-Translator: Mauro Rulli <mauro.rulli@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
