--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/no_NO/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/no_NO/openmediavault-ldap.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#   <runesudden@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-19 16:20+0200\n"
-"PO-Revision-Date: 2012-08-19 14:21+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-10-25 15:43+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,56 +19,56 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Base DN"
-msgstr ""
+msgstr "Base DN"
 
 msgid "Directory Service"
-msgstr ""
+msgstr "Katalogtjeneste"
 
 msgid "Enable"
-msgstr ""
+msgstr "Aktiver"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Tillegsfunksjoner"
 
 msgid "General settings"
-msgstr ""
+msgstr "Generelle innstilling"
 
 msgid "Groups suffix"
-msgstr ""
+msgstr "Gruppesuffiks"
 
 msgid "Host"
-msgstr ""
+msgstr "Vert"
 
 msgid "LDAP"
-msgstr ""
+msgstr "LDAP"
 
 msgid "Password"
-msgstr ""
+msgstr "Passord"
 
 msgid "Root Bind DN"
-msgstr ""
+msgstr "Root Bind DN"
 
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
 "'dc=example,dc=net'."
-msgstr ""
+msgstr "Spesifiser base unikt navn (DN) til å bruke som søkebase, f.eks. 'dc=example,dc=net'."
 
 msgid "Specifies the credentials with which to bind."
-msgstr ""
+msgstr "Angir legitimasjon å binde med."
 
 msgid ""
 "Specifies the distinguished name (DN) with which to bind to the directory "
 "server for lookups, e.g. 'cn=manager,dc=example,dc=net'."
-msgstr ""
+msgstr "Angir det unike navnet (DN) for å binde seg til katalogserveren for oppslag, f.eks. 'cn=manager,dc=eksempel,dc=net'."
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
-msgstr ""
+msgstr "Angir gruppesuffiks, f.eks. 'ou=Grupper'"
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
-msgstr ""
+msgstr "Angir brukersuffiks, f.eks. 'ou=Brukere'"
 
 msgid "The FQDN or IP address of the server."
-msgstr ""
+msgstr "Fullstendig domenenavn eller IP-adressen til serveren."
 
 msgid "Users suffix"
-msgstr ""
+msgstr "Brukersuffiks"
