--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/pt_PT/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/pt_PT/openmediavault-ldap.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Nelson Rosado <nelsontrosado@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-19 16:20+0200\n"
-"PO-Revision-Date: 2012-08-19 14:21+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-09-25 11:34+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,25 +25,25 @@ msgid "Directory Service"
 msgstr ""
 
 msgid "Enable"
-msgstr ""
+msgstr "Ativar"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Opções extras"
 
 msgid "General settings"
-msgstr ""
+msgstr "Definições gerais"
 
 msgid "Groups suffix"
-msgstr ""
+msgstr "Sufixo de grupos"
 
 msgid "Host"
-msgstr ""
+msgstr "Host"
 
 msgid "LDAP"
-msgstr ""
+msgstr "LDAP"
 
 msgid "Password"
-msgstr ""
+msgstr "Password"
 
 msgid "Root Bind DN"
 msgstr ""
@@ -50,24 +51,24 @@ msgstr ""
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
 "'dc=example,dc=net'."
-msgstr ""
+msgstr "Especifica o nome distinto base (DN) para usar como base de pesquisa, por exemplo, \"dc = exemplo, dc = net '."
 
 msgid "Specifies the credentials with which to bind."
-msgstr ""
+msgstr "Especifica as credenciais com que se ligam."
 
 msgid ""
 "Specifies the distinguished name (DN) with which to bind to the directory "
 "server for lookups, e.g. 'cn=manager,dc=example,dc=net'."
-msgstr ""
+msgstr "Especifica o nome distinto (DN) com o qual se ligar ao servidor de diretório para pesquisas, por exemplo, 'cn = manager, dc = exemplo, dc = net \"."
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
-msgstr ""
+msgstr "Especifica o sufixo do grupo, por exemplo, 'ou=Grupos'."
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
-msgstr ""
+msgstr "Especifica o sufixo do utilizador, por exemplo, 'ou=Utilizadores'."
 
 msgid "The FQDN or IP address of the server."
-msgstr ""
+msgstr "O endereço IP ou FQDN do servidor."
 
 msgid "Users suffix"
 msgstr ""
