--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (0.4.2) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Jan 2013 01:45:49 +0100
+
 openmediavault-lvm2 (0.4.1) stable; urgency=low
 
   * Improve code.
