--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (0.4.1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Jan 2013 01:46:51 +0100
+
 openmediavault-netatalk (0.4) stable; urgency=low
 
   * Upgrade to xmlstarlet 1.3.1.
