--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-16 19:00+0200\n"
 "PO-Revision-Date: 2012-08-18 09:34+0000\n"
-"Last-Translator: maurorulli <mauro.rulli@gmail.com>\n"
+"Last-Translator: Mauro Rulli <mauro.rulli@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
