--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/no_NO/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/no_NO/openmediavault-netatalk.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-16 19:00+0200\n"
-"PO-Revision-Date: 2012-08-16 17:00+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-10-25 15:33+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,16 +22,16 @@ msgid "Add share"
 msgstr "Legg til delt område"
 
 msgid "Advertise this service via mDNS/DNS-SD."
-msgstr ""
+msgstr "Annonser denne tjenesten via mDNS/DNS-SD."
 
 msgid "Allow guest logins"
 msgstr "Tillat gjesteinnlogging"
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr ""
+msgstr "Tillat login med passord sendt ukryptert."
 
 msgid "Allow plain passwords"
-msgstr ""
+msgstr "Tillat ukrypterte passord"
 
 msgid "Apple Filing"
 msgstr "Apple Filing"
@@ -52,7 +52,7 @@ msgid "Comment"
 msgstr "Kommenter"
 
 msgid "DNS Service Discovery"
-msgstr ""
+msgstr "DNS Tjeneste Oppdagelse"
 
 msgid "Don't do :hex translation for dot files."
 msgstr "Ikke gjør :hex oversetninger for dot filer"
@@ -67,7 +67,7 @@ msgid "Enable Time Machine support for this share."
 msgstr "Aktiver Time Machine støtte for dette delte området."
 
 msgid "Enable user home directories."
-msgstr ""
+msgstr "Aktiver hjemmemapper for brukere"
 
 msgid "Extra options"
 msgstr "Ekstra alternativer"
@@ -82,7 +82,7 @@ msgid "Hide dot files"
 msgstr "Skjul dot filer"
 
 msgid "Home directories"
-msgstr ""
+msgstr "Hjemmemapper"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
@@ -97,7 +97,7 @@ msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr ""
+msgstr "Begrens den rapporterte volumstørrelsen i MiB, for å hindre TM fra å bruke hele diskplassen til sikkerhetskopi. Sett verdien til 0 for å deaktivere denne funksjonen."
 
 msgid "Lowercases names in both directions"
 msgstr "Små bokstaver i begge retninger"
@@ -115,7 +115,7 @@ msgid "Password"
 msgstr "Passord"
 
 msgid "Quota"
-msgstr ""
+msgstr "Kvote"
 
 msgid "Read only"
 msgstr "Kun lesning"
@@ -139,7 +139,7 @@ msgid "The name of the share."
 msgstr "Det delte områdets navn"
 
 msgid "The service name."
-msgstr ""
+msgstr "Tjenestenavnet."
 
 msgid ""
 "This forces filenames to be restricted to the character set used by Windows."
