--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pt_PT/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pt_PT/openmediavault-netatalk.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-16 19:00+0200\n"
-"PO-Revision-Date: 2012-08-16 17:00+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-09-25 11:29+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -98,7 +98,7 @@ msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr ""
+msgstr "Limitar o tamanho do volume reportado ao valor dado em MiB, evitando TM de usar o espaço em disco inteiro para backup. Defina esse valor para 0 para desabilitar esta opção."
 
 msgid "Lowercases names in both directions"
 msgstr "Nomes em minúsculas em ambas as direções."
@@ -116,7 +116,7 @@ msgid "Password"
 msgstr "Senha de acesso"
 
 msgid "Quota"
-msgstr ""
+msgstr "Quota"
 
 msgid "Read only"
 msgstr "Ler apenas"
