--- a/deb/openmediavault-route/usr/share/openmediavault/locale/no_NO/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/no_NO/openmediavault-route.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#   <runesudden@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-31 20:03+0200\n"
-"PO-Revision-Date: 2012-08-31 18:46+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-10-25 15:46+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add static route"
-msgstr ""
+msgstr "Legg til statisk rute"
 
 msgid "Comment"
-msgstr ""
+msgstr "Kommentar"
 
 msgid "Edit static route"
-msgstr ""
+msgstr "Rediger statisk rute"
 
 msgid "Gateway"
-msgstr ""
+msgstr "Gateway"
 
 msgid "Gateway used to reach the above network address."
-msgstr ""
+msgstr "Gateway benyttet for å nå ovennevnte nettverksadresse."
 
 msgid "IP or network address."
-msgstr ""
+msgstr "IP eller nettverksadresse."
 
 msgid "Network"
-msgstr ""
+msgstr "Nettverk"
 
 msgid "Static Routes"
-msgstr ""
+msgstr "Statiske ruter"
