--- a/deb/openmediavault-route/usr/share/openmediavault/locale/pt_PT/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/pt_PT/openmediavault-route.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Nelson Rosado <nelsontrosado@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-31 20:03+0200\n"
-"PO-Revision-Date: 2012-08-31 18:46+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-12-09 18:52+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add static route"
-msgstr ""
+msgstr "Adicionar rota estática"
 
 msgid "Comment"
-msgstr ""
+msgstr "Comente"
 
 msgid "Edit static route"
-msgstr ""
+msgstr "Editar rotas estáticas"
 
 msgid "Gateway"
-msgstr ""
+msgstr "Gateway"
 
 msgid "Gateway used to reach the above network address."
-msgstr ""
+msgstr "Gateway utilizada para atingir para lá do endereço de rede."
 
 msgid "IP or network address."
-msgstr ""
+msgstr "IP ou endereço de rede"
 
 msgid "Network"
-msgstr ""
+msgstr "Rede"
 
 msgid "Static Routes"
-msgstr ""
+msgstr "Rotas estáticas"
