--- a/deb/openmediavault-route/usr/share/openmediavault/locale/tr_TR/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/tr_TR/openmediavault-route.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Serhat SUT <serhat.sut@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-31 20:03+0200\n"
-"PO-Revision-Date: 2012-08-31 18:46+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-10-09 17:15+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Add static route"
-msgstr ""
+msgstr "Statik yönlendirme ekle"
 
 msgid "Comment"
-msgstr ""
+msgstr "Açıklama"
 
 msgid "Edit static route"
-msgstr ""
+msgstr "Statik yönlendirmeyi düzenle"
 
 msgid "Gateway"
-msgstr ""
+msgstr "Ağ geçidi"
 
 msgid "Gateway used to reach the above network address."
-msgstr ""
+msgstr "Yukarıdaki ağ adreslerine ulaşmak için ag geçidi kullanıldı."
 
 msgid "IP or network address."
-msgstr ""
+msgstr "IP ya da ağ adresi."
 
 msgid "Network"
-msgstr ""
+msgstr "Ağ"
 
 msgid "Static Routes"
-msgstr ""
+msgstr "Statik Yönledirme"
