Mantis 0000693: Do not allow to modify user 'root' via RPC.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.13) stable; urgency=low
+
+  * Mantis 0000693: Do not allow to modify user 'root' via RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Jan 2013 14:45:18 +0100
+
 openmediavault (0.4.12) stable; urgency=low
 
   * Add Galician WebGUI language support.
