--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2012.
+# Stefan Thrane Overby <stoverby@gmail.com>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2012-12-22 02:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-01-07 10:44+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -736,7 +736,7 @@ msgid "Delete content"
 msgstr "Slet indhold"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Slet filer"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Slet filer på den modtagende side, der ikke eksisterer på afsender"
@@ -1161,12 +1161,12 @@ msgstr "Fil"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Filer i papirkurven vil blive automatisk slettet efter det speciefiret antal dage. Sæt til 0 for manuel sletning."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Filer der er større end det speciefiret antal af bytes vil ikke blive lagt i papirkurven. Sæt til 0 for uendelig størrelse."
 
 msgid "Filesystem"
 msgstr "Filsystem"
@@ -1739,7 +1739,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Maksimal download rate (KiB/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Maksimal filstørrelse"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
@@ -2221,7 +2221,7 @@ msgid ""
 "want.</li><li>Idle - Check the device unless it is in SLEEP, STANDBY or IDLE"
 " mode. In the IDLE state, most disks are still spinning, so this is probably"
 " not what you want.</li></ul>"
-msgstr "Forhindre en disk i at blive spundet op, når den periodisk bliver adspurgt.<br/><ul><li>Aldrig - Spørg (kontroller) enheden uanset dens power tilstand. Dette kan medføre at en disk, der er spundet ned bliver spundet op, når den kontrolleres.</li><li>Dvale - Kontroller enheden medmindre den er i DVALE tilstand.</li><li>Standby - Kontroller enheden medmindre den er i DVALE eller STANDBY tilstand. I disse tilstande spinder de fleste diske ikke, så hvis du ønsker at forhindre en disk i at spinde op ved hver forespørgeles, er det nok det du vil.</li><li>Tomgang - Kontroller enheden medmindre den er i DVALE, STANDBY eller TOMGANG tilstand. I TOMGANG tilstand, spinder de fleste diske stadig, så det er sandsynligvis nok ikke det du vil.</li></ul>"
+msgstr "Forhindre en disk i at blive spundet op, når den periodisk bliver adspurgt.<br/><ul><li>Aldrig - Spørg (kontroller) enheden uanset dens power tilstand. Dette kan medføre at en disk, der er spundet ned bliver spundet op, når den kontrolleres.</li><li>Dvale - Kontroller enheden medmindre den er i DVALE tilstand.</li><li>Standby - Kontroller enheden medmindre den er i DVALE eller STANDBY tilstand. I disse tilstande spinder de fleste diske ikke, så hvis du ønsker at forhindre en disk i at spinde op ved hver forespørgeles, er det nok det du vil.</li><li>Ledig - Kontroller enheden medmindre den er i DVALE, STANDBY eller LEDIG tilstand. I LEDIG tilstand, spinder de fleste diske stadig, så det er sandsynligvis nok ikke det du vil.</li></ul>"
 
 msgid "Primary"
 msgstr "Primær"
