--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Kostas Moho <kgounaris@hotmail.com>, 2012.
+# Kostas Moho <kgounaris@hotmail.com>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2012-12-22 02:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-01-06 21:43+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/projects/p/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -736,7 +736,7 @@ msgid "Delete content"
 msgstr "Διαγραφή περιεχομένων"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Διαγραφή αρχείων"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Διαγραφή αρχείων του λήπτη που δεν υπάρχουν στον αποστολέα"
@@ -1161,12 +1161,12 @@ msgstr "Αρχείο"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Τα αρχεία στον κάδο ανακύκλωσης διαγράφονται αυτόματα μετά τον προσδιορισμένο αριθμό ημερών. Το 0 σημαίνει χειροκίνητη διαγραφή."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Αρχεία μεγαλύτερα από το προσδιορισμένο μέγεθος, δεν θα τοποθετούνται στον κάδο ανακύκλωσης. Το 0 σημαίνει απεριόριστο μέγεθος."
 
 msgid "Filesystem"
 msgstr "Σύστημα αρχείων"
@@ -1739,7 +1739,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Μέγιστη ταχύτητα κατεβάσματος (KiB/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Μέγιστο μέγεθος αρχείου"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
