--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Christophe Lherieau <skimpax@gmail.com>, 2012.
+# Christophe Lherieau <skimpax@gmail.com>, 2012-2013.
 # Nahir Mohamed <nahirmoha@gmail.com>, 2012.
 # Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012.
 # Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012.
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2012-12-22 02:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-01-09 14:51+0000\n"
+"Last-Translator: Christophe Lherieau <skimpax@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -739,7 +739,7 @@ msgid "Delete content"
 msgstr "Supprimer le contenu"
 
 msgid "Delete files"
-msgstr ""
+msgstr "Supprimer les fichiers"
 
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Supprime les fichiers de destination qui n'existent pas à la source"
@@ -1164,12 +1164,12 @@ msgstr "Fichier"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Les fichiers de la poubelle seront automatiquement supprimés après le nombre de jours spécifié. Mettre 0 pour une suppression manuelle."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Les fichiers ayant une taille en octets supérieure à la valeur spécifiée ne seront pas mis dans la poubelle. Mettre 0 pour une taille de fichier illimitée."
 
 msgid "Filesystem"
 msgstr "Système de fichiers"
@@ -1742,7 +1742,7 @@ msgid "Maximum download rate (KiB/s)"
 msgstr "Vitesse réception max. (Ko/s)"
 
 msgid "Maximum file size"
-msgstr ""
+msgstr "Taille maximale de fichier"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
