--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.16) stable; urgency=low
+
+  * Mantis 0000704: Name with space are duplicated in shared folders ACL.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Jan 2013 21:56:10 +0100
+
 openmediavault (0.4.15) stable; urgency=low
 
   * Mantis 0000701: parsing /etc/fstab failed => \n has write.
