--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <kochinc@outlook.com>, 2013.
 #   <kochinc@outlook.com>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2013-01-01 11:36+0000\n"
+"PO-Revision-Date: 2013-01-18 17:22+0000\n"
 "Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
@@ -703,7 +704,7 @@ msgid "DNS Server"
 msgstr "DNS 伺服器"
 
 msgid "DNS Service Discovery"
-msgstr "DNS 服務搜索"
+msgstr "DNS 服務探尋"
 
 msgid "DNS server"
 msgstr "DNS 伺服器"
