--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.4.17) stable; urgency=low
 
+  * Improve omv_get_ipaddr helper function.
   * Keep the old configuration files when upgrading Debian packages.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 23 Jan 2013 20:19:37 +0100
