Mantis 0000706: Nut plug-in not correctly work on netserver mode.

--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault-nut (0.4.2) stable; urgency=low
 
-  * Mantis 0000706: Nut plug-in not correctly work on netserver mode.
+  * Mantis 0000706: Nut plug-in not correctly work on netserver mode. If
+    remote access is enabled the daemon is listening on ANY network address,
+    thus limit access via iptables to enhance security if required.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 Jan 2013 15:29:40 +0100
 
