--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (0.4.4) stable; urgency=low
+
+  * Use the comment from a scan job as email subject.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 31 Jan 2013 20:55:49 +0100
+
 openmediavault-clamav (0.4.3) stable; urgency=low
 
   * Update locales.
