--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,8 @@ openmediavault (0.4.17) stable; urgency=low
   * Keep the old configuration files when upgrading Debian packages.
   * Limit sshd to IPv4 (AddressFamily=inet) if IPv6 is disabled.
   * Use the comment from a rsync/cron job as email subject.
+  * Setting session timeout to 0 in the 'System | General Settings | Web Administration'
+    page sets the session timeout to unlimited.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 23 Jan 2013 20:19:37 +0100
 
