--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2013-01-09 14:51+0000\n"
-"Last-Translator: Christophe Lherieau <skimpax@gmail.com>\n"
+"POT-Creation-Date: 2013-02-01 19:27+0100\n"
+"PO-Revision-Date: 2013-02-01 18:27+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2011,6 +2011,9 @@ msgstr "Oman"
 msgid "Online"
 msgstr "En ligne"
 
+msgid "Operation not allowed for user '%s'."
+msgstr ""
+
 msgid "Options"
 msgstr "Options"
 
@@ -2987,8 +2990,9 @@ msgstr "Il n'est pas nécessaire que la session SSL de la connexion de contrôle
 msgid "The service name."
 msgstr "Le nom du service."
 
-msgid "The session timeout time in minutes."
-msgstr "Le temps d'expiration de la session en minutes."
+msgid ""
+"The session timeout time in minutes. Set to 0 to disable automatic logout."
+msgstr ""
 
 msgid "The shared folder is already used by another share"
 msgstr "Le dossier partagé est déjà utilisé par un autre partage."
