--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2013-01-12 15:26+0000\n"
-"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
+"POT-Creation-Date: 2013-02-01 19:27+0100\n"
+"PO-Revision-Date: 2013-02-01 18:28+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2008,6 +2008,9 @@ msgstr "Amman"
 msgid "Online"
 msgstr "Çalışır"
 
+msgid "Operation not allowed for user '%s'."
+msgstr ""
+
 msgid "Options"
 msgstr "Seçenekler"
 
@@ -2984,8 +2987,9 @@ msgstr "Kontrol bağlantılarındaki SSL oturumlarının data bağlantılarında
 msgid "The service name."
 msgstr "Servis adı."
 
-msgid "The session timeout time in minutes."
-msgstr "Dakika olarak oturum zaman aşımı."
+msgid ""
+"The session timeout time in minutes. Set to 0 to disable automatic logout."
+msgstr ""
 
 msgid "The shared folder is already used by another share"
 msgstr "Bu paylaşılmış klasör zaten başka bir paylaşımda kullanılıyor"
