--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -6,6 +6,7 @@
 #   <bejonwe@gmx.net>, 2012.
 # Marcel Beck <fo3nik5@gmail.com>, 2012.
 #   <mattjes04@googlemail.com>, 2012.
+# Volker <votdev@gmx.de>, 2013.
 # Volker  <votdev@gmx.de>, 2012.
 #   <votdev@gmx.de>, 2012.
 #   <warhog@gmx.de>, 2012-2013.
@@ -13,9 +14,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2013-01-08 18:56+0000\n"
-"Last-Translator: warhog <warhog@gmx.de>\n"
+"POT-Creation-Date: 2013-02-01 19:27+0100\n"
+"PO-Revision-Date: 2013-02-01 18:34+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2013,6 +2014,9 @@ msgstr "Oman"
 msgid "Online"
 msgstr "Online"
 
+msgid "Operation not allowed for user '%s'."
+msgstr "Die Operation ist für den Benutzer '%s' nicht erlaubt."
+
 msgid "Options"
 msgstr "Optionen"
 
@@ -2989,8 +2993,9 @@ msgstr "Es ist keine Voraussetzung das die Kontrollverbindung einer SSL-Session 
 msgid "The service name."
 msgstr "Der Name des Dienstes."
 
-msgid "The session timeout time in minutes."
-msgstr "Das Sitzungszeitlimit in Minuten."
+msgid ""
+"The session timeout time in minutes. Set to 0 to disable automatic logout."
+msgstr "Das Sitzungszeitlimit in Minuten. Auf 0 setzen um das automatische Abmelden zu deaktivieren."
 
 msgid "The shared folder is already used by another share"
 msgstr "Der freigegebene Ordner wird bereits von einer anderen Freigabe verwendet."
