--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-22 03:12+0100\n"
-"PO-Revision-Date: 2013-01-05 22:01+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2013-02-01 19:27+0100\n"
+"PO-Revision-Date: 2013-02-01 18:27+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2010,6 +2010,9 @@ msgstr "Omán"
 msgid "Online"
 msgstr "Online"
 
+msgid "Operation not allowed for user '%s'."
+msgstr ""
+
 msgid "Options"
 msgstr "Opciones"
 
@@ -2986,8 +2989,9 @@ msgstr "Los requerimientos de la sesión SSL no son necesarios para la conexión
 msgid "The service name."
 msgstr "Nombre del servicio."
 
-msgid "The session timeout time in minutes."
-msgstr "El tiempo límite de sesión en minutos."
+msgid ""
+"The session timeout time in minutes. Set to 0 to disable automatic logout."
+msgstr ""
 
 msgid "The shared folder is already used by another share"
 msgstr "La carpeta compartida ya está siendo usada por otra compartición."
