--- a/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
+++ b/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-22 03:12+0100\n"
+"POT-Creation-Date: 2013-02-01 19:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1931,6 +1931,9 @@ msgstr ""
 msgid "Online"
 msgstr ""
 
+msgid "Operation not allowed for user '%s'."
+msgstr ""
+
 msgid "Options"
 msgstr ""
 
@@ -2843,7 +2846,7 @@ msgstr ""
 msgid "The service name."
 msgstr ""
 
-msgid "The session timeout time in minutes."
+msgid "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr ""
 
 msgid "The shared folder is already used by another share"
