--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:28+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-03 11:00+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2009,7 +2009,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Handlingen er ikke tilladt for brugeren '%s'."
 
 msgid "Options"
 msgstr "Valgmuligheder"
@@ -2615,7 +2615,7 @@ msgid "Session not authenticated"
 msgstr "Session ikke godkendt"
 
 msgid "Session timeout"
-msgstr "Session timeout"
+msgstr "Session udløbstid"
 
 msgid "Set browseable"
 msgstr "Gør søgebar"
@@ -2989,7 +2989,7 @@ msgstr "Tjeneste navn."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Session udløbstid i minutter. Sæt til 0 for at deaktivere automatisk log ud."
 
 msgid "The shared folder is already used by another share"
 msgstr "Den delte mappe bliver allerede brugt af en anden delt mappe"
