--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:27+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-02 06:30+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/projects/p/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2009,7 +2009,7 @@ msgid "Online"
 msgstr "Συνδεδεμένο"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Δεν επιτρέπεται η λειτουργία στον χρήστη '%s'."
 
 msgid "Options"
 msgstr "Επιλογές"
@@ -2989,7 +2989,7 @@ msgstr "Το όνομα της υπηρεσίας."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Ο χρόνος λήξης της συνεδρίας σε λεπτά. Με 0 απενεργοποιείται."
 
 msgid "The shared folder is already used by another share"
 msgstr "Ο κοινόχρηστος φάκελος χρησιμοποιείται ήδη από άλλο κοινόχρηστο"
