--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -8,14 +8,14 @@
 #   <arturmon82@gmail.com>, 2012.
 #   <ffrants@gmail.com>, 2012.
 # Ichi  <ichiperm@gmail.com>, 2012.
-# артур Мудрых <arturmon82@gmail.com>, 2012.
+# артур Мудрых <arturmon82@gmail.com>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:27+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-03 09:38+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2014,7 +2014,7 @@ msgid "Online"
 msgstr "Онлайн"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Операция не разрешена для пользователя '%s'."
 
 msgid "Options"
 msgstr "Опции"
@@ -2994,7 +2994,7 @@ msgstr "Имя сервиса."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Время тайм-аута сеанса в минутах. Установите 0, чтобы отключить автоматический выход из системы."
 
 msgid "The shared folder is already used by another share"
 msgstr "Эта общая папка уже используется другим общим ресурсом"
