--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (0.4.2) stable; urgency=low
+
+  * Mantis 0000712: Guest login using AFP plugin not working.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Feb 2013 19:04:29 +0100
+
 openmediavault-netatalk (0.4.1) stable; urgency=low
 
   * Update locales.
