--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/gl/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/gl/openmediavault-netatalk.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-16 19:00+0200\n"
-"PO-Revision-Date: 2012-03-17 01:51+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2013-02-09 19:45+0100\n"
+"PO-Revision-Date: 2013-02-09 18:45+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,13 +18,22 @@ msgstr ""
 "Language: gl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid " "
+msgstr ""
+
 msgid "Add share"
+msgstr ""
+
+msgid "Advanced settings"
 msgstr ""
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr ""
 
-msgid "Allow guest logins"
+msgid "Allow guest login."
+msgstr ""
+
+msgid "Allow guests to create or modify files."
 msgstr ""
 
 msgid "Allow logins with passwords transmitted in the clear."
@@ -33,9 +43,6 @@ msgid "Allow plain passwords"
 msgstr ""
 
 msgid "Apple Filing"
-msgstr ""
-
-msgid "Authentication"
 msgstr ""
 
 msgid "Case folding"
@@ -48,7 +55,7 @@ msgid "Client sees uppercase, server sees lowercase"
 msgstr ""
 
 msgid "Comment"
-msgstr ""
+msgstr "Comentario"
 
 msgid "DNS Service Discovery"
 msgstr ""
@@ -60,7 +67,7 @@ msgid "Edit share"
 msgstr ""
 
 msgid "Enable"
-msgstr ""
+msgstr "Activar"
 
 msgid "Enable Time Machine support for this share."
 msgstr ""
@@ -69,18 +76,24 @@ msgid "Enable user home directories."
 msgstr ""
 
 msgid "Extra options"
-msgstr ""
+msgstr "Opcións adicionais"
 
 msgid "Forces filename restrictions"
 msgstr ""
 
 msgid "General settings"
+msgstr "Axustes xerais"
+
+msgid "Guest login"
 msgstr ""
 
 msgid "Hide dot files"
-msgstr ""
+msgstr "Agochar os ficheiros con punto"
 
 msgid "Home directories"
+msgstr ""
+
+msgid "If this option is not set, guests may only read files."
 msgstr ""
 
 msgid ""
@@ -102,43 +115,43 @@ msgid "Lowercases names in both directions"
 msgstr ""
 
 msgid "Make dot files invisible."
-msgstr ""
+msgstr "Facer que os ficheiros con punto non sexan visíbeis."
 
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 msgid "None"
-msgstr ""
+msgstr "Ningún"
 
 msgid "Password"
-msgstr ""
+msgstr "Contrasinal"
 
 msgid "Quota"
-msgstr ""
+msgstr "Cota"
 
 msgid "Read only"
-msgstr ""
+msgstr "Só para lectura"
 
 msgid "Set read only."
-msgstr ""
+msgstr "Estabelecer só para lectura"
 
 msgid "Settings"
-msgstr ""
+msgstr "Axustes"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Cartafol compartido"
 
 msgid "Shares"
-msgstr ""
+msgstr "Comparticións"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "A localización dos ficheiros que compartir."
 
 msgid "The name of the share."
 msgstr ""
 
 msgid "The service name."
-msgstr ""
+msgstr "O nome do servizo."
 
 msgid ""
 "This forces filenames to be restricted to the character set used by Windows."
@@ -148,19 +161,19 @@ msgid "This option handles, if the case of filenames should be changed."
 msgstr ""
 
 msgid "Time Machine support"
-msgstr ""
+msgstr "Compatibilidade con «Time Machine»"
 
 msgid "Unix privileges"
-msgstr ""
+msgstr "Privilexios Unix"
 
 msgid "Uppercases names in both directions"
 msgstr ""
 
 msgid "Use AFP3 unix privileges."
-msgstr ""
+msgstr "Usar os privilexios AFP3 de Unix"
 
 msgid "Use dots"
-msgstr ""
+msgstr "Usar puntos"
 
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
@@ -168,4 +181,4 @@ msgid ""
 msgstr ""
 
 msgid "n/a"
-msgstr ""
+msgstr "n/d"
