--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/openmediavault-netatalk.pot
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/openmediavault-netatalk.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-netatalk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-16 19:00+0200\n"
+"POT-Creation-Date: 2013-02-09 19:45+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,13 +17,22 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid " "
+msgstr ""
+
 msgid "Add share"
+msgstr ""
+
+msgid "Advanced settings"
 msgstr ""
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr ""
 
-msgid "Allow guest logins"
+msgid "Allow guest login."
+msgstr ""
+
+msgid "Allow guests to create or modify files."
 msgstr ""
 
 msgid "Allow logins with passwords transmitted in the clear."
@@ -33,9 +42,6 @@ msgid "Allow plain passwords"
 msgstr ""
 
 msgid "Apple Filing"
-msgstr ""
-
-msgid "Authentication"
 msgstr ""
 
 msgid "Case folding"
@@ -77,10 +83,16 @@ msgstr ""
 msgid "General settings"
 msgstr ""
 
+msgid "Guest login"
+msgstr ""
+
 msgid "Hide dot files"
 msgstr ""
 
 msgid "Home directories"
+msgstr ""
+
+msgid "If this option is not set, guests may only read files."
 msgstr ""
 
 msgid "If this option is set, then a password is required to access the share."
