--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <kochinc@outlook.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-16 19:00+0200\n"
-"PO-Revision-Date: 2012-03-17 01:51+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2013-02-09 19:45+0100\n"
+"PO-Revision-Date: 2013-02-09 18:45+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,155 +18,167 @@ msgstr ""
 "Language: zh_TW\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgid " "
+msgstr ""
+
 msgid "Add share"
+msgstr "新增共享"
+
+msgid "Advanced settings"
 msgstr ""
 
 msgid "Advertise this service via mDNS/DNS-SD."
+msgstr "經由 mDNS/DNS-SD 來宣告此項服務。"
+
+msgid "Allow guest login."
 msgstr ""
 
-msgid "Allow guest logins"
+msgid "Allow guests to create or modify files."
 msgstr ""
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr ""
+msgstr "允許登入的密碼以明文傳輸。"
 
 msgid "Allow plain passwords"
-msgstr ""
+msgstr "允許明文密碼"
 
 msgid "Apple Filing"
-msgstr ""
-
-msgid "Authentication"
-msgstr ""
+msgstr "Apple Filing"
 
 msgid "Case folding"
-msgstr ""
+msgstr "大小寫合併"
 
 msgid "Client sees lowercase, server sees uppercase"
-msgstr ""
+msgstr "客戶端看到小寫字母，伺服器看到大寫字母"
 
 msgid "Client sees uppercase, server sees lowercase"
-msgstr ""
+msgstr "客戶端看到大寫字母，伺服器看到小寫字母"
 
 msgid "Comment"
-msgstr ""
+msgstr "註釋"
 
 msgid "DNS Service Discovery"
-msgstr ""
+msgstr "DNS 服務搜索"
 
 msgid "Don't do :hex translation for dot files."
-msgstr ""
+msgstr "對點檔案不做 :hex 轉換。"
 
 msgid "Edit share"
-msgstr ""
+msgstr "編輯共享"
 
 msgid "Enable"
-msgstr ""
+msgstr "啟用"
 
 msgid "Enable Time Machine support for this share."
-msgstr ""
+msgstr "對這個共享啟用 Time Machine。"
 
 msgid "Enable user home directories."
-msgstr ""
+msgstr "啟用用戶的家目錄。"
 
 msgid "Extra options"
-msgstr ""
+msgstr "額外選項"
 
 msgid "Forces filename restrictions"
-msgstr ""
+msgstr "強迫檔案名稱限制"
 
 msgid "General settings"
+msgstr "一般設定"
+
+msgid "Guest login"
 msgstr ""
 
 msgid "Hide dot files"
-msgstr ""
+msgstr "隱藏點檔案"
 
 msgid "Home directories"
+msgstr "家目錄"
+
+msgid "If this option is not set, guests may only read files."
 msgstr ""
 
 msgid ""
 "If this option is set, then a password is required to access the share."
-msgstr ""
+msgstr "如果此選項被設定，則需要密碼才可以存取該共享。"
 
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr ""
+msgstr "如果此選項被設定，則用戶不能再該共存中新建或修改檔案。"
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr ""
+msgstr "限制回報的磁碟大小為所給定以 MiB 為單位的數值，如此避免 TM 把整個磁碟空間都使用來做備份。設定此數值成 0 來停用此選項。"
 
 msgid "Lowercases names in both directions"
-msgstr ""
+msgstr "在兩個方向都用小寫字母名稱"
 
 msgid "Make dot files invisible."
-msgstr ""
+msgstr "使點檔案看不見。"
 
 msgid "Name"
-msgstr ""
+msgstr "名稱"
 
 msgid "None"
-msgstr ""
+msgstr "無"
 
 msgid "Password"
-msgstr ""
+msgstr "密碼"
 
 msgid "Quota"
-msgstr ""
+msgstr "配額"
 
 msgid "Read only"
-msgstr ""
+msgstr "唯讀"
 
 msgid "Set read only."
-msgstr ""
+msgstr "設為唯讀"
 
 msgid "Settings"
-msgstr ""
+msgstr "設置"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "共享檔案夾"
 
 msgid "Shares"
-msgstr ""
+msgstr "共享"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "用來共享之檔案的位置。"
 
 msgid "The name of the share."
-msgstr ""
+msgstr "該共享的名稱。"
 
 msgid "The service name."
-msgstr ""
+msgstr "服務名稱。"
 
 msgid ""
 "This forces filenames to be restricted to the character set used by Windows."
-msgstr ""
+msgstr "這將迫使檔案名稱只能限於 Windows 所使用的字符集。"
 
 msgid "This option handles, if the case of filenames should be changed."
-msgstr ""
+msgstr "此選項處理是否檔案名稱的大小寫應該被改變。"
 
 msgid "Time Machine support"
-msgstr ""
+msgstr "Time Machine 支援"
 
 msgid "Unix privileges"
-msgstr ""
+msgstr "Unix 權限"
 
 msgid "Uppercases names in both directions"
-msgstr ""
+msgstr "在兩個方向都用大寫字母名稱"
 
 msgid "Use AFP3 unix privileges."
-msgstr ""
+msgstr "使用 AFP3 unix 權限。"
 
 msgid "Use dots"
-msgstr ""
+msgstr "使用點檔案"
 
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
 ".Parent and anything that starts with .Apple."
-msgstr ""
+msgstr "當此選項被設定，某些檔案名稱將成為不合法。這些是 .Parent 及任何開頭為 .Apple 之檔案。"
 
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
