--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-nut (0.4.3) stable; urgency=low
+
+  * Update locales.
+  * Stop service and remove udev-rule if plugin is deinstalled/purged.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 Feb 2013 20:11:22 +0100
+
 openmediavault-nut (0.4.2) stable; urgency=low
 
   * Mantis 0000706: Nut plug-in not correctly work on netserver mode. If
