Continue to implement openmediavault-usbbackup plugin.

--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/de_DE/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/de_DE/openmediavault-usbbackup.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-02-15 13:59+0100\n"
-"PO-Revision-Date: 2013-02-15 13:07+0000\n"
+"POT-Creation-Date: 2013-02-15 14:44+0100\n"
+"PO-Revision-Date: 2013-02-15 14:04+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -121,8 +121,13 @@ msgstr "Freigegebene Ordner"
 msgid "Suppress non-error messages."
 msgstr "Unterdrücke Nicht-Fehlermeldungen."
 
-msgid "The shared folder to backup."
-msgstr "Der freigegebene Ordner von welchem eine Sicherungskopie angelegt werden soll."
+msgid "The external storage device."
+msgstr "Das externe Speichergerät."
+
+msgid ""
+"The shared folder to synchronise when the external storage device is "
+"connected."
+msgstr "Der freigegebene Ordner welcher zu synchronisieren ist wenn das externe Speichergerät angeschlossen wird."
 
 msgid "Times"
 msgstr "Zeiten"
