--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/zh_TW/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/zh_TW/openmediavault-usbbackup.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-02-15 13:59+0100\n"
-"PO-Revision-Date: 2013-02-15 12:59+0000\n"
+"POT-Creation-Date: 2013-02-15 14:44+0100\n"
+"PO-Revision-Date: 2013-02-15 13:44+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
@@ -120,7 +120,12 @@ msgstr ""
 msgid "Suppress non-error messages."
 msgstr ""
 
-msgid "The shared folder to backup."
+msgid "The external storage device."
+msgstr ""
+
+msgid ""
+"The shared folder to synchronise when the external storage device is "
+"connected."
 msgstr ""
 
 msgid "Times"
